--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Celengan Couple - Nabung Bareng</title>
+    <meta name="google-site-verification" content="xTIAKdxG4gUy9vODBVJOrDKbYV3KASqKEuPMyqLoBvA" />
+    <title>Celengan Couple - Aplikasi Nabung Bareng Pacar</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
